overflow correction

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
   text-transform: uppercase;
   font-family: 'Titan One', cursive;
   background: lightblue;
-  overflow: hidden;
+  
 }
 
 .intro-content {
